# Omgevingsmonitor_Software

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  MJSGadget - dB meter Debug ST-Nucleo-SWD.launch  MJSGadget - dB meter Debug ST-Pwr.launch  MJSGadget - dB meter Debug.cfg  MJSGadget - dB meter Debug.launch  MJSGadget - dB meter.ioc  MJSGadget Debug (2).launch  MJSGadget Debug ST-Pwr.launch  MJSGadget Debug.cfg  MJSGadget Debug.launch  MJSGadget.ioc  README.md  STM32L072RZTX_FLASH.ld
Core/Inc/: Battery_utils.h  Config.h  EEProm.h  ESP.h  I2CSensors.h  PC_Config.h  PowerUtils.h  RealTimeClock.h  TimingUtils.h  adc.h  cred_pub.h  efficient_10log10.h  gadget.h  gasSensor.h  globals.h  gpio.h  humidTemp.h  i2s.h  main.h  measurement.h  microphone.h  microphone_constants.h  print_functions.h  sen5x.h  sensirion_gas_index_algorithm.h  setLED.h  sgp40.h  sgp41.h  sound_LUT_select.h  sound_LUTs.h  sound_measurement.h  sound_utilities.h  statusCheck.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h  usart.h  utils.h  wsenHIDS.h
Core/Inc/Archief/: sgp40.h  wsenHIDS.h
Core/Src/: Battery_utils.c  EEProm.c  ESP.c  I2CSensors.c  PC_Config.c  PowerUtils.c  RealTimeClock.c  TimingUtils.c  adc.c  crc.c  dma.c  efficient_10log10.c  gadget.c  gasSensor.c  gpio.c  humidTemp.c  i2c.c  i2s.c  iwdg.c  main.c  measurement.c  microphone.c  print_functions.c  rtc.c  sen5x.c  sen5x_i2c.c  sensirion_gas_index_algorithm.c  sensirion_i2c.c  setLED.c  sgp40.c  sgp41.c  sound_LUTs.c  sound_measurement.c  sound_utilities.c  statusCheck.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c  tim.c  usart.c  usb.c  (+2 more)
Core/Src/Archief/: sgp40.txt  wsenHIDS.txt
Debug/: MJSGadget - dB meter.elf  MJSGadget - dB meter.list  MJSGadget - dB meter.map  MJSGadget.elf  MJSGadget.list  MJSGadget.map  makefile  objects.list  objects.mk  sources.mk
Debug/Core/Src/: ESP.cyclo  ESP.d  ESP.su  I2CSensors.cyclo  I2CSensors.d  I2CSensors.su  crc.cyclo  crc.d  crc.su  dma.d  gadget.cyclo  gadget.d  gadget.su  gasSensor.cyclo  gasSensor.d  gasSensor.su  gpio.cyclo  gpio.d  gpio.su  humidTemp.cyclo  humidTemp.d  humidTemp.su  i2c.cyclo  i2c.d  i2c.su  i2s.cyclo  i2s.d  i2s.su  main.cyclo  main.d  main.su  measurement.cyclo  measurement.d  measurement.su  microphone.cyclo  microphone.d  microphone.su  rtc.cyclo  rtc.d  rtc.su  (+30 more)
Debug/Core/Startup/: startup_stm32l072rztx.d  subdir.mk
Debug/Drivers/BSP/Adafruit_Shield/: subdir.mk
Debug/Drivers/STM32L0xx_HAL_Driver/: stm32l0xx_hal.cyclo  stm32l0xx_hal.d  stm32l0xx_hal.su  stm32l0xx_hal_cortex.cyclo  stm32l0xx_hal_cortex.d  stm32l0xx_hal_cortex.su  stm32l0xx_hal_dma.cyclo  stm32l0xx_hal_dma.d  stm32l0xx_hal_dma.su  stm32l0xx_hal_exti.cyclo  stm32l0xx_hal_exti.d  stm32l0xx_hal_exti.su  stm32l0xx_hal_flash.cyclo  stm32l0xx_hal_flash.d  stm32l0xx_hal_flash.su  stm32l0xx_hal_flash_ex.cyclo  stm32l0xx_hal_flash_ex.d  stm32l0xx_hal_flash_ex.su  stm32l0xx_hal_flash_ramfunc.cyclo  stm32l0xx_hal_flash_ramfunc.d  stm32l0xx_hal_flash_ramfunc.su  stm32l0xx_hal_gpio.cyclo  stm32l0xx_hal_gpio.d  stm32l0xx_hal_gpio.su  stm32l0xx_hal_i2c.cyclo  stm32l0xx_hal_i2c.d  stm32l0xx_hal_i2c.su  stm32l0xx_hal_i2c_ex.cyclo  stm32l0xx_hal_i2c_ex.d  stm32l0xx_hal_i2c_ex.su  stm32l0xx_hal_i2s.cyclo  stm32l0xx_hal_i2s.d  stm32l0xx_hal_i2s.su  stm32l0xx_hal_pwr.cyclo  stm32l0xx_hal_pwr.d  stm32l0xx_hal_pwr.su  stm32l0xx_hal_pwr_ex.cyclo  stm32l0xx_hal_pwr_ex.d  stm32l0xx_hal_pwr_ex.su  stm32l0xx_hal_rcc.cyclo  (+24 more)
Debug/USB_DEVICE/App/: subdir.mk
Drivers/CMSIS/DSP/: arm_math.h
Release/: MJSGadget - dB meter.elf  MJSGadget - dB meter.list  MJSGadget - dB meter.map  makefile  objects.list
USB_DEVICE/App/: usb_device.h  usbd_cdc_if.c  usbd_cdc_if.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
(+297 files in other folders)
